--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
-markdown: kramdown 
+markdown: kramdown
+highlighter: rouge
 permalink: /:categories/:title.html
 url: 
 lsi: false
-pygments: true
+pygments: false
 safe: true
 auto: true 
 
